[tool.poetry]
name = "module8"
version = "0.1.0"
description = ""
authors = ["Terinor <kirstruk01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymongo = "^4.6.1"
mongoengine = "^0.27.0"
pika = "^1.3.2"
faker = "^22.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
